--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@types/three": "^0.171.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
